// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSheet snapshot with nothing enabled 1`] = `
<div
  className="css-p0wmbe-View-FlexBox-FlexColumn"
>
  <div
    className="css-1edwc8r-View-FlexBox-FlexColumn"
  >
    <div
      className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
    >
      <span
        className="css-meh2qi-Text"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-1houjzq-View-FlexBox-FlexColumn"
      >
        <div
          className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-auhar3-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-xsnw23-Text e19o3fcp0"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
                />
                <input
                  checked={false}
                  className="css-1pxrk7-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
        <div
          className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-auhar3-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-xsnw23-Text e19o3fcp0"
                >
                  TestPlugin
                </span>
                <div
                  className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
                />
                <input
                  checked={false}
                  className="css-1pxrk7-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
      >
        <div
          className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-xing9h-StyledButton enfqd41"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-auhar3-TooltipContainer e1abcqbd0"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-ia8nd7-StyledButton enfqd41"
            disabled={true}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsSheet snapshot with one plugin enabled 1`] = `
<div
  className="css-p0wmbe-View-FlexBox-FlexColumn"
>
  <div
    className="css-1edwc8r-View-FlexBox-FlexColumn"
  >
    <div
      className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
    >
      <span
        className="css-meh2qi-Text"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-1houjzq-View-FlexBox-FlexColumn"
      >
        <div
          className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-auhar3-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-xsnw23-Text e19o3fcp0"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
                />
                <input
                  checked={false}
                  className="css-1pxrk7-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
        <div
          className="css-18abd42-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-auhar3-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-xsnw23-Text e19o3fcp0"
                >
                  TestPlugin
                </span>
                <div
                  className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
                />
                <input
                  checked={true}
                  className="css-1pxrk7-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
      >
        <div
          className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-xing9h-StyledButton enfqd41"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-auhar3-TooltipContainer e1abcqbd0"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-xing9h-StyledButton enfqd41"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
